<resources>
    <string name="app_name">FaceSpace</string>
    <string name="forgot">Forgot Password?</string>
    <string name="signUp">Sign Up</string>
    <string name="projectName">Facespace</string>
    <string name="email">Email:</string>
    <string name="enterPassword">enter your password</string>
    <string name="enterEmail">enter your email</string>
    <string name="password">Password:</string>
    <string name="signIn">Sign In</string>
    <string name="welcome">Hi there! Nice to see you again.</string>
    <string name="username">Username:</string>
    <string name="enterUsername">enter username</string>
    <string name="KVKK">I have read and accept everything.</string>
    <string name="alreadyHaveAccount">Have an account?</string>
    <string name="join">Join</string>
    <string name="title">Title:</string>
    <string name="by">By:</string>
    <string name="created_by">Created By</string>
    <string name="desc">Desc:</string>
    <string name="go_to_community">Go To Community</string>
    <string name="open">Open</string>
    <string name="joined">Joined</string>
    <string name="welcome_to_facesapce">Welcome to FaceSpace</string>
    <string name="purpose">Here, you will share thoughts and find out what others think.</string>
    <string name="register_today">Register Now</string>
    <string name="since">Since:</string>
    <string name="name">Name:</string>
    <string name="surname">Surname:</string>
    <string name="birthday">Birthday:</string>
    <string name="enter_date">Enter Date</string>
    <string name="date">Date</string>
    <string name="select_date">Select Date</string>
    <string name="profile_page_link">Profile Picture Link:</string>
    <string name="enter_your_name">enter your name</string>
    <string name="enter_your_link">enter profile picture link</string>
    <string name="enter_your_surname">enter your surname</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="create_community">New Community</string>
    <string name="log_out">Log Out</string>
    <string name="facespace">Facespace</string>
    <string name="back_to_n_home">Back to \n home</string>
    <string name="create_post">New Post</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
