<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginPageActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="30dp"
    android:paddingHorizontal="40dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:gravity="center|start"
        android:orientation="vertical">

        <ImageView
            android:layout_width="232dp"
            android:layout_height="191dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/projectName"
            android:src="@drawable/facespace" />

        <TextView
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signIn"
            android:textSize="23sp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="15sp"
            android:textColor="@color/gray"
            />

        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/username"
            android:textSize="17sp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/inputUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterUsername"
            android:inputType="textEmailAddress"
            android:textSize="15sp"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="35sp"
            android:text="@string/password"
            android:textSize="17sp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterPassword"
            android:inputType="textPassword"
            android:textSize="15sp"
            />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/cairo_semibold"
            android:gravity="center"
            android:text="@string/signIn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />




    </LinearLayout>




    <LinearLayout
        android:id="@+id/llFour"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:gravity="center"
        android:orientation="horizontal">



        <TextView
            android:id="@+id/tvAccount"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:backgroundTint="@color/white"
            android:textSize="14sp"
            android:textColor="@color/pink"
            android:text="Don't have an account?"
            android:fontFamily="@font/cairo_semibold"
            android:textAllCaps="false"
            android:shadowColor="@color/white"
            />


        <Button
            android:id="@+id/btnGoSignUpPage"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:backgroundTint="@color/pink"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/amiko_semibold"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:text="@string/signUp"
            android:textAllCaps="false"
            />

    </LinearLayout>



</LinearLayout>